--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -108,6 +108,8 @@
   margin: 15px 30px 20px; 
   display: block;
   transition: all 0.3s ease;
+  left: 15px;
+  position: relative;
 }
 
 .login-button:hover {
